# jarvis62125

./: .gitignore  200.html  404.html  README.md  _payload.json  docker-compose.yaml  index.html  manifest.webmanifest  sw.js
_nuxt/: 47PnPyWz.js  BRzK1--W.js  BTNXKxyx.js  BinO8Iep.js  C6whIJMH.js  LjlxD7AP.js  RhZaeURN.js  SglbRLE_.js
assets/: 3A2CSaTJ.js  A6hiv8bO.js  BRFVrd7S.js  BUYeyvNT.js  BUdM9f_a.js  BY2C0Lpq.js  BYjloQGp.js  BZP4uwkI.js  BbJ3nHiL.js  BbgW9Ql6.js  Bn3cnlVk.js  BsrMES80.js  BtydbLI_.js  CAOb1l9y.js  CHS1PUni.js  CRm_vrIH.js  CU6SjFjL.js  CYmJRyg5.js  Ch9dVsW4.js  CheSJQmM.js  Cl8ygYqz.js  Cw_RA2O8.js  D-ZDN7Wh.js  D-yxAYoo.js  D30Pm4hc.js  D6btGN_E.js  DFdJT816.js  DIjiCJpf.js  DZMqnCpM.js  D_JLu6qi.js  DkGgq7UV.js  DkJRxwNr.js  DvsnCT3P.js  F7AI-9fO.js  JMJw6Y2V.js  entry.B180_TTl.css  entry.C_XLXnvG.css  entry.DRHKl9Zj.css  entry.OsZdPcAe.css  o4hHwEub.js  (+1 more)
jarvis-agent/: Dockerfile  main.py  pyproject.toml
jarvis-frontend/: .gitignore  dist  nuxt.config.ts  package-lock.json  package.json
jarvis-mc/: main.py  pyproject.toml
mcp-proxy/: .gitignore  main.py  mcp_flow.py  proxy.py  pyproject.toml  test.json  utils.py
mcp-proxy/LLMs/: __init__.py  claude.py  ollama_llms.py
mcp-proxy/functionPrompts/: prompts.py
mcp-proxy/mcp-server/: pyproject.toml  server.py  todolist.py
modelfiles/: jarvis3-qwen-modelfile  jarvis4-qwen-modelfile  jarvis4-qwen:latest
neo-frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
proxy/: .env  Dockerfile  main.py  pyproject.toml
speaches/: README.md
stt/: Dockerfile  main.py  (+1 more)
(+44 files in other folders)
