[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.4",
    "mcp>=1.6.0",
    "nodriver>=0.46.1",
    "ollama>=0.5.1",
    "python-dotenv>=1.1.0",
    "quart>=0.20.0",
    "quart-cors>=0.8.0",
    "requests>=2.32.4",
]
